fixing UFProver.
replacing List with Deque,
adding documentation,
fixing new push()-method (instead of reseting the counter, create a new
one in the queue).

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18919 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c